# backend

./: .gitignore  Dockerfile  Dockerfile-debug  README.md  main.py  pyproject.toml  run.py
.github/workflows/: docker-build-push-on-commit.yml  docker-build-push-on-tag.yml  docker-build-push-sha.yml  docker-build-push.yml  pytest.yml
alembic/: env.py
alembic/versions/: e3a1c7b1774f_add_email_unique_constraint.py  f4d85324a2f5_adding_user_model.py
app/: __init__.py  main.py
app/api/v1/: auth.py  user.py
app/core/: config.py  database.py
app/crud/: user.py
app/models/: user.py  util.py
requirements/: base.txt  dev.txt
tests/: conftest.py
tests/fixtures/: client.py
tests/integration/: test_integration_user.py
tests/unit/crud/: test_crud_user.py
tests/unit/routes/: test_routes_user.py
