[tool.poetry]
name = "victoryvault-backend"
version = "0.1.0"
description = "Backend API server for VictoryVault"
authors = ["Chris Paterson <chris@chrispaterson.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.29"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
debugpy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
