[tool.poetry]
name = "victoryvault-backend"
version = "0.1.0"
description = "Backend API server for VictoryVault"
authors = ["Chris Paterson <chris@chrispaterson.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.29"
debugpy = "^1.8"
sqlalchemy = "^2.0"
asyncpg = {extras = ["binary"], version = "^0.29"}
alembic = "^1.13"
pytest-asyncio = "~0.21"
httpx = "^0.27.0"
sqlmodel = "^0.0.16"
black = "^24.4"
ruff = "^0.4"
pytest-postgresql = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "~8.1"
debugpy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
